--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                   </svg>
                 </a>
               </div>
-              <a href="NIHAAL RESUME 2024 0.1.pdf" download>
+              <a href="nihaalwebdevresume.pdf" download>
                 <button class="btn btn-dark mt-3">Get Resume</button>
               </a>
             </div>
